# CppTemplatesTCG

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
basics/: addval.cpp  max.cpp  max.hpp  max2.cpp  max3.cpp  max3a.cpp  max4.cpp  stack1.hpp  stack1test.cpp  stack2.hpp  stack2test.cpp  stack3.hpp  stack3test.cpp  stack4.hpp  stack4test.cpp
